--- a/BCD/User Interface/Base.lproj/Main.storyboard
+++ b/BCD/User Interface/Base.lproj/Main.storyboard
@@ -1365,7 +1365,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="aGb-J3-zip" secondAttribute="bottom" id="1Xd-C5-bxo"/>
                             <constraint firstItem="rRV-i3-O9v" firstAttribute="top" secondItem="Vyg-Fb-xa9" secondAttribute="bottom" id="98F-h4-V7b"/>
@@ -1959,7 +1959,7 @@
         <image name="ic_search" width="24" height="24"/>
         <image name="ic_settings" width="24" height="24"/>
         <image name="ic_suki" width="18" height="18"/>
-        <image name="ic_swap" width="40" height="40"/>
+        <image name="ic_swap" width="48" height="48"/>
         <image name="liuliet-pro" width="115.33333587646484" height="120"/>
     </resources>
 </document>
