Button pointer interactions

--- a/BCDSharing/Base.lproj/MainInterface.storyboard
+++ b/BCDSharing/Base.lproj/MainInterface.storyboard
@@ -29,7 +29,7 @@
                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UXr-97-JuW">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UXr-97-JuW">
                                         <rect key="frame" x="0.0" y="92" width="295" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="Wo0-pJ-K5S"/>
