--- a/BCD/HisTutPage/style.css
+++ b/BCD/HisTutPage/style.css
@@ -2,11 +2,13 @@
     color-scheme: light dark;
     --secondary-label: rgba(0, 0, 0, 0.498);
     --shadow: #555;
+    --pointer-interaction-background: #ddd;
 }
 @media (prefers-color-scheme: dark) {
     :root {
         --secondary-label: rgba(255, 255, 255, 0.549);
         --shadow: #bbb;
+        --pointer-interaction-background: #555;
     }
 }
 * { margin: 0; padding: 0; }
@@ -50,19 +52,29 @@ section h4 {
     font-size: 75%;
 }
 a {
-    display: block;
     text-decoration: none;
-    text-align: right;
     color: #ff3b7f;
+    padding: 10px;
+    border-radius: 10px;
+    transition: 0.2s;
+    transition-timing-function: ease-out;
+}
+a:hover {
+    background: var(--pointer-interaction-background);
 }
 .go-back a {
+    border-radius: 0;
+    display: block;
     text-align: center;
-    color: #ddd;
+    color: #eee;
     background: #555;
     width: 100%;
     height: 100px;
     line-height: 100px;
     font-size: 150%;
+}
+.go-back a:hover {
+    background: #777;
 }
 section ol {
     padding: 0 20px 0 40px;
